# structure

./: CMakeLists.txt  library.h
lab10/: task  task.cpp
lab11/: task  task.cpp
lab12/: task1  task1.cpp  task2.cpp
lab13/: task1  task1.cpp  task2  task2.cpp  task3  task3.cpp  task4  task4.cpp  task5  task5.cpp
lab14/: task1  task1.cpp  task2  task2.cpp  task3  task3.cpp  task4  task4.cpp
lab2/: task1  task1.cpp  task2.cpp  task3  task3.cpp  task4  task4.cpp
lab3/: task1  task1.cpp  task2  task2.cpp  task3  task3.cpp
lab4/: task  task.cpp
lab5/: task1  task1.cpp  task2  task2.cpp  task3  task3.cpp
lab6/: task1  task1.cpp  task2  task2.cpp  task3  task3.cpp  task4  task4.cpp
lab7/: task1  task1.cpp  task2  task2.cpp
lab8/: task1  task1.cpp  task2  task2.cpp
lab9/: help.cpp  task1  task1.cpp  task2  task2.cpp
