cmake_minimum_required(VERSION 4.0)
project(DataStructuresAndAlgorithms)

set(CMAKE_CXX_STANDARD 20)

add_library(DataStructuresAndAlgorithms STATIC library.cpp
        lab2/task1.cpp
        lab2/task2.cpp
        lab2/task3.cpp
        lab2/task4.cpp
        lab3/task1.cpp
        lab3/task2.cpp
        lab3/task3.cpp
        lab4/task.cpp
        lab5/task1.cpp
        lab5/task2.cpp
        lab5/task3.cpp
        lab6/task1.cpp
        lab6/task2.cpp
        lab6/task3.cpp
        lab6/task4.cpp
        lab7/task1.cpp
        lab7/task2.cpp
        lab9/task1.cpp
        lab9/task2.cpp
        lab10/task.cpp
        lab7/task1.cpp
        lab7/task2.cpp
        lab8/task1.cpp
        lab8/task2.cpp
        lab11/task.cpp
        lab12/task1.cpp
        lab12/task2.cpp
        lab13/task1.cpp
        lab13/task2.cpp
        lab13/task3.cpp
        lab13/task4.cpp
        lab13/task5.cpp
        lab14/task1.cpp
        lab14/task2.cpp
        lab14/task3.cpp
        lab14/task4.cpp
)
